/*
 * Copyright 2018 Google Inc. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package kythe.proto.pipeline;

option java_package = "com.google.devtools.kythe.proto";

import "kythe/proto/schema.proto";
import "kythe/proto/serving.proto";
import "kythe/proto/storage.proto";

// A Node represents a Kythe graph node with all its known facts and edges.
message Node {
  kythe.proto.VName source = 1;

  // Facts associated with the source VName (making exception for a small number
  // of special-cases below).
  repeated Fact fact = 2;

  // Edges associated with the source VName.
  repeated Edge edge = 3;

  // Special-case for the ubiquitous /kythe/node/kind fact.  This fact will not
  // appear in the fact list above.
  oneof kind {
    kythe.proto.schema.NodeKind kythe_kind = 4;
    string generic_kind = 5;
  }

  // Special-case for the ubiquitous /kythe/subkind fact.  This fact will not
  // appear in the fact list above.
  oneof subkind {
    kythe.proto.schema.Subkind kythe_subkind = 6;
    string generic_subkind = 7;
  }
}

// A Fact represents a single Kythe graph node fact.
message Fact {
  kythe.proto.VName source = 1;

  oneof name {
    kythe.proto.schema.FactName kythe_name = 2;
    string generic_name = 3;
  }

  bytes value = 4;
}

// An Edge represents a single Kythe graph edge.
message Edge {
  kythe.proto.VName source = 1;
  kythe.proto.VName target = 2;

  oneof kind {
    kythe.proto.schema.EdgeKind kythe_kind = 3;
    string generic_kind = 4;
  }
  int32 ordinal = 5;
}

message Reference {
  kythe.proto.VName source = 1;
  oneof kind {
    kythe.proto.schema.EdgeKind kythe_kind = 2;
    string generic_kind = 3;
  }
  kythe.proto.serving.ExpandedAnchor anchor = 4;

  kythe.proto.VName scope = 5; // anchor scope
}

// A DecorationPiece is an independent component of a larger
// kythe.proto.serving.FileDecorations message.  Each FileDecorations field is
// one choice for the piece oneof field.
message DecorationPiece {
  kythe.proto.VName file_v_name = 1;

  message Definition {
    kythe.proto.VName node = 1;
    kythe.proto.serving.ExpandedAnchor definition = 2;
  }

  oneof piece {
    kythe.proto.serving.File file = 2;
    Reference reference = 3;
    Node node = 4;
    Definition definition = 5;
    // TODO(schroederc): diagnostics
    // TODO(schroederc): overrides
  }
}
